feat: novos campos no histórico de execução e upload de imagem em ambos os cenários de processamento
