# src/main/kotlin/br/com/buscamed/api/v1/extension/MultipartExtensions.kt
@@ -1,6 +1,6 @@
 package br.com.buscamed.api.v1.extension
 
-import br.com.buscamed.api.v1.dto.request.ImageMultipartDTO
+import br.com.buscamed.api.v1.dto.request.TextAndImageMultipartDTO
 import io.ktor.http.content.PartData
 import io.ktor.http.content.forEachPart
 import io.ktor.server.application.ApplicationCall
@@ -9,17 +9,28 @@ import io.ktor.utils.io.readRemaining
 import kotlinx.io.readByteArray
 
 /**
- * Extrai os dados de imagem e o tipo MIME de uma requisição Multipart.
+ * Extrai os dados de imagem, tipo MIME e campo de texto de uma requisição Multipart.
  *
- * @return Um objeto [ImageMultipartDTO] contendo os bytes da imagem e o MIME type extraídos dos cabeçalhos do arquivo.
+ * @return Um objeto [TextAndImageMultipartDTO] contendo as informações extraídas.
  */
-suspend fun ApplicationCall.extractImageMultipart(): ImageMultipartDTO {
+suspend fun ApplicationCall.extractTextAndImageMultipart(): TextAndImageMultipartDTO {
     val multipart = receiveMultipart()
+    var text: String? = null
     var imageBytes: ByteArray? = null
     var mimeType: String? = null
+    var pipelineVersion: String? = null
 
     multipart.forEachPart { part ->
         when (part) {
+            is PartData.FormItem -> {
+                if (part.name == "text") {
+                    text = part.value
+                }
+
+                if (part.name == "pipelineVersion") {
+                    pipelineVersion = part.value
+                }
+            }
             is PartData.FileItem -> {
                 if (part.name == "image") {
                     imageBytes = part.provider().readRemaining().readByteArray()
@@ -31,5 +42,5 @@ suspend fun ApplicationCall.extractImageMultipart(): ImageMultipartDTO {
         part.dispose()
     }
 
-    return ImageMultipartDTO(imageBytes, mimeType)
+    return TextAndImageMultipartDTO(text, imageBytes, mimeType, pipelineVersion)
 }
